--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
+        "antd": "^5.22.7",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "concurrently": "^9.1.2",
@@ -39,5 +40,8 @@
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.19.0",
         "vite": "^6.0.7"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^5.5.2"
     }
 }
