refactor: 添加路径别名配置
- 修改 app.tsx 中的样式导入路径，使用别名导入

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,12 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "paths": {
+            "@/*": ["./resources/js/*"],
+            "@css/*": ["./resources/css/*"],
+            "@assets/*": ["./resources/assets/*"]
+        }
     },
     "include": ["../manager/resources"]
 }
