build: TypeScript 配置和环境引用

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,8 +22,13 @@
         "paths": {
             "@/*": ["./resources/js/*"],
             "@css/*": ["./resources/css/*"],
-            "@assets/*": ["./resources/assets/*"]
+            "@assets/*": ["./resources/assets/*"],
+            "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
-    "include": ["../manager/resources"]
+    "include": [
+        "resources/js/**/*.ts",
+        "resources/js/**/*.tsx",
+        "resources/js/**/*.d.ts"
+    ]
 }
