--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "concurrently": "^9.1.2",
+        "currency.js": "^2.0.4",
+        "dayjs": "^1.11.13",
         "eslint": "^9.17.0",
         "eslint-plugin-oxlint": "^0.15.5",
         "eslint-plugin-react-hooks": "^5.1.0",
