--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-    "private": true,
     "type": "module",
-    "packageManager": "pnpm@9.15.1+sha256.9e534e70afef06374f6126b44bda5760947135ce16a30aef1010e965fb7e3e3e",
+    "private": true,
+    "packageManager": "pnpm@10.0.0+sha256.43abf6e720fb7bc53c591b0862605c7d323d0a9d2dd33bcac07b062e13cf4948",
     "scripts": {
         "build": "tsc && vite build",
         "dev": "vite",
         "prepare": "husky",
-        "format": "prettier --write resources/",
-        "lint": "oxlint --fix resources/ && eslint --fix resources/"
+        "format": "prettier --ignore-unknown --write resources/",
+        "lint": "eslint resources/",
+        "lint:fix": "eslint --fix resources/",
+        "style": "stylelint resources/*.css",
+        "style:fix": "stylelint --fix resources/*.css"
     },
     "devDependencies": {
+        "@ant-design/icons": "^5.5.2",
+        "@ant-design/pro-components": "^2.8.3",
+        "@antfu/eslint-config": "^3.14.0",
+        "@eslint-react/eslint-plugin": "^1.23.2",
         "@eslint/js": "^9.17.0",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
@@ -25,25 +32,24 @@
         "currency.js": "^2.0.4",
         "dayjs": "^1.11.13",
         "eslint": "^9.17.0",
-        "eslint-plugin-oxlint": "^0.15.5",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
         "laravel-vite-plugin": "^1.1.1",
         "lint-staged": "^15.3.0",
-        "oxlint": "^0.15.5",
         "postcss": "^8.4.49",
         "prettier": "^3.4.2",
         "prettier-plugin-tailwindcss": "^0.6.9",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "stylelint": "^16.13.1",
+        "stylelint-config-idiomatic-order": "^10.0.0",
+        "stylelint-config-standard": "^37.0.0",
+        "stylelint-order": "^6.0.4",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.19.0",
         "vite": "^6.0.7"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^5.5.2"
     }
 }
